packages/webassemblyjs/test/fixtures/conversions/type-errors/trunc_u-i32-f32/module.wast
(module (func (result i32) (i32.trunc_u/f32 (i64.const 0))))
